--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
   <head>
-    <title>Dwukolumna</title>
+    <title>Dwukolumna Pawełka</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
