--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   </head>
   <body>
     <header>
+      <p>header</p>
     </header>
     <nav>
+      <p>nav</p>
     </nav>
     <main>
+      <p>main</p>
     </main> 
      <footer>
+       <p>footer</p>
     </footer>
   </body> 
 </html>
