--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-<!Doctype HTML>
-<html>
-  <head>
-    <title>Dwukolumna Pawełka</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <p>header</p>
-    </header>
-    <nav>
-      <p>nav</p>
-    </nav>
-    <main>
-      <p>main</p>
-    </main> 
-     <footer>
-       <p>footer</p>
-    </footer>
-  </body> 
+<html lang="pl-PL">
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Kawiarnia Mors</title>
+	</head>
+	<body>
+		<header>
+			KAWIARNIA MORS
+		</header>
+		<nav>
+			<a href="kontakt.txt">Oferta</a>
+		</nav>
+		<main>
+			<img src="tort.png" alt="tort">
+		</main>
+		<footer>
+			<b>tel:</b> 745 180 631 <b>e-mail:</b>mors@wp.pl
+		</footer>
+	</body>
 </html>
