--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			KAWIARNIA MORS
 		</header>
 		<nav>
-			<a href="kontakt.txt">Oferta</a>
+			<a href="oferta.txt">Oferta</a>
 		</nav>
 		<main>
 			<img src="tort.png" alt="tort">
