--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="oferta.txt">Oferta</a>
 		</nav>
 		<main>
-			<img src="tort.png" alt="tort">
+			<img src="image.png" alt="tort">
 		</main>
 		<footer>
 			<b>tel:</b> 745 180 631 <b>e-mail:</b>mors@wp.pl
